@@ -1,3 +1,3 @@
 """check unused import from a wildcard import"""
 # pylint: disable=line-too-long
-from .unused_argument_py3 import *  # [unused-wildcard-import, unused-wildcard-import, wildcard-import]
+from .unused_argument_py3 import *  # [unused-wildcard-import, wildcard-import]
